--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_chats">Chats</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_contacts">Contacts</string>
+    <string name="menu_groups">Groups</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="forgotPassword">Forgot Password</string>
@@ -29,4 +29,5 @@
     <string name="male">MALE</string>
     <string name="female">FEMALE</string>
     <string name="logo">LOGO</string>
+    <string name="logout">Logout</string>
 </resources>
