--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_createGroup">Create Group</string>
+    <string name="group_name">Group Name</string>
 
     <string name="menu_chats">Chats</string>
     <string name="menu_profile">Profile</string>
@@ -30,4 +32,8 @@
     <string name="female">FEMALE</string>
     <string name="logo">LOGO</string>
     <string name="logout">Logout</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create">Create</string>
 </resources>
