--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create">Create</string>
     <string name="onlineIcon">Online</string>
+    <string name="add">add</string>
+    <string name="delete">delete</string>
+    <string name="remove">remove</string>
 </resources>
