messaging done with like and delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="delete">delete</string>
     <string name="remove">remove</string>
     <string name="editProfile">Edit Profile</string>
+    <string name="update">Update</string>
+    <string name="send">Send</string>
+    <string name="enter_your_message">Enter your message</string>
+    <string name="like">Like</string>
 </resources>
