--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="send">Send</string>
     <string name="enter_your_message">Enter your message</string>
     <string name="like">Like</string>
+    <string name="action_showMembers">Show Members</string>
 </resources>
